force-app/main/default/objects/LASERCA__Public_Records__c/LASERCA__Public_Records__c.object-meta.xml
<CustomObject>
    <description>Public Records reported by customers credit Bureau.</description>
    <label>Public Records</label>
    <nameField>
        
        <label>Public Records Name</label>
        
        
        <type>Text</type>
        
    </nameField>
    <pluralLabel>Public Records</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>