force-app/main/default/objects/LASERCA__Public_Records__c/fields/LASERCA__Account_Ownership_Type__c.field-meta.xml
<CustomField>
    <fullName>LASERCA__Account_Ownership_Type__c</fullName>
    <label>Account Ownership Type</label>
    <length>25</length>
    <type>Text</type>
</CustomField>