force-app/main/default/objects/LASERCA__Public_Records__c/fields/LASERCA__Amount__c.field-meta.xml
<CustomField>
    <fullName>LASERCA__Amount__c</fullName>
    <label>Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>