force-app/main/default/objects/LASERCA__Public_Records__c/fields/LASERCA__Bankruptcy_Liability_Amount__c.field-meta.xml
<CustomField>
    <fullName>LASERCA__Bankruptcy_Liability_Amount__c</fullName>
    <label>Bankruptcy Liability Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>