force-app/main/default/objects/LASERCA__Public_Records__c/fields/LASERCA__Bankruptcy_Type__c.field-meta.xml
<CustomField>
    <fullName>LASERCA__Bankruptcy_Type__c</fullName>
    <label>Bankruptcy Type</label>
    <length>150</length>
    <type>Text</type>
</CustomField>