force-app/main/default/objects/LASERCA__Public_Records__c/fields/LASERCA__Court_Name__c.field-meta.xml
<CustomField>
    <fullName>LASERCA__Court_Name__c</fullName>
    <description>Court that the public Record was filed in</description>
    <label>Court Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>