force-app/main/default/objects/LASERCA__Public_Records__c/fields/LASERCA__Date_Filed__c.field-meta.xml
<CustomField>
    <fullName>LASERCA__Date_Filed__c</fullName>
    <label>Date Filed</label>
    <type>Date</type>
</CustomField>