force-app/main/default/objects/LASERCA__Public_Records__c/fields/LASERCA__Disposition__c.field-meta.xml
<CustomField>
    <fullName>LASERCA__Disposition__c</fullName>
    <label>Disposition</label>
    <length>150</length>
    <type>Text</type>
</CustomField>