force-app/main/default/objects/LASERCA__Public_Records__c/fields/LASERCA__Disposition_Date__c.field-meta.xml
<CustomField>
    <fullName>LASERCA__Disposition_Date__c</fullName>
    <label>Disposition Date</label>
    <type>Date</type>
</CustomField>