force-app/main/default/objects/LASERCA__Public_Records__c/fields/LASERCA__Docket_Reference__c.field-meta.xml
<CustomField>
    <fullName>LASERCA__Docket_Reference__c</fullName>
    <label>Docket Reference</label>
    <length>150</length>
    <type>Text</type>
</CustomField>