force-app/main/default/objects/LASERCA__Public_Records__c/fields/LASERCA__Plantiff__c.field-meta.xml
<CustomField>
    <fullName>LASERCA__Plantiff__c</fullName>
    <label>Plantiff</label>
    <length>150</length>
    <type>Text</type>
</CustomField>