force-app/main/default/objects/LASERCA__Public_Records__c/fields/LASERCA__Type__c.field-meta.xml
<CustomField>
    <fullName>LASERCA__Type__c</fullName>
    <label>Type</label>
    <length>200</length>
    <type>Text</type>
</CustomField>