force-app/main/default/objects/LASERCA__Public_Records__c/listViews/LASERCA__All.listView-meta.xml
<ListView>
    <fullName>LASERCA__All</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>